--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
     "mongoose": "^6.8.4",
+    "multer": "^1.4.5-lts.1",
+    "multer-gridfs-storage": "^5.0.2",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
